--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -2256,8 +2256,7 @@ audio {
     width: 32px;
     height: 32px;
     background-color: #fff;
-    /*box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;*/
-    box-shadow:none;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
     border-radius: 30px;
     border: 1px solid #ccc;
 
