Ajout table des matières du CSS

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1,4 +1,39 @@
 
+/**
+* 1.0 General
+* 1.1 Typographie
+* Regions
+* 2.1 Menu secondaire
+* 2.2 Blocs headers 
+* 2.3 Recherche - Blocs de recherche
+* 2.4 Barre Grise (region Breadcrumb) 
+* 2.5 Région Aide/Alertes 
+* 2.6 Menus 
+* 2.7 Noeuds - Règles générales 
+* 2.8 Region Content Bottom 
+* 2.9 Region Page Bottom 
+* 2.10 Sidebars 
+* 2.11 Footer 
+* Fonctionnalités
+* 3 Vues + Listes - règles générales 
+* 3.1 Label des champs, label des EVA 
+* 3.2 Glossaire - Bonifications 
+* 3.3 Liens Read More
+* 3.4 Vertical Tabs 
+* 3.5 Quicktabs 
+* 3.6 Création Compte Utilisateur 
+* 3.7 Profil Utilisateur
+* 3.8 Collapsiblock
+* 3.9 Flags
+* 3.10 Intégration profil Utilisateur 
+* 3.11 Contact - Bonifications 
+* 3.12 Modèle associé + Services associés sur Besoin
+* 3.13 Taxonomie Listes 
+* 3.14 Profil Usager (Doublon) 
+* 3.15 Médias 
+* 4 Responsive @media 
+* 5 Varia 
+*/
 
 
 /* Welcome to Compass.
