--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1838,7 +1838,7 @@ ul.quicktabs-tabs li.active a {
   float: right;
   border-radius: 4px;
   margin-right: 4px;
-  margin-top: 3px; /**/
+  margin-top: 0;
   font-size: 0;
 }
 .crise-flags a::before {
