fix bouton recherche pour utilisateur anonyme seulement

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -2366,4 +2366,9 @@ audio {
 }
 */
 
-
+#block-collapsiblesearch #edit-actions--2{
+  display:none;
+}
+#block-collapsiblesearch .btn {
+  display: none;
+}
