--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -2403,5 +2403,8 @@ audio {
   display: none;
 }
 
-/* Test connection Cedric */
+/* Encadrements*/
+.page-node-type-modele .view-eva .views-row {
+  border: 1px solid black;
+}
 
