--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -2405,7 +2405,7 @@ audio {
 }
 
 /* Encadrements*/
-.page-node-type-modele .view-eva .views-row {
+.page-node-type-modele .view-eva .well {
   border: 1px solid black;
 }
 
