--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -2404,8 +2404,9 @@ audio {
   display: none;
 }
 
-/* Encadrements*/
-.page-node-type-modele .view-eva .well {
+/* Encadrements
+.page-node-type-modele .view-eva .well*/
+.well {
   border: 1px solid black;
 }
 
