Encadrement: règle générique

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -2406,7 +2406,7 @@ audio {
 
 /* Encadrements
 .page-node-type-modele .view-eva .well*/
-.well {
-  border: 1px solid black;
+.view .well {
+  border: 1px solid #86BC42;
 }
 
