--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -2414,3 +2414,8 @@ audio {
   border: 1px solid #86BC42;
 }
 
+/* Listes responsive: dégager les blocs */
+.responsive .views-row:nth-of-type(2n+1) {
+    clear: left;
+}
+
