--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -2383,7 +2383,7 @@ audio {
 @media (max-width: 767px) {
   .path-bibliographie .region-header, 
   .path-recherche .region-header {
-      display: block;
+      display: block !important;
   }
   #block-block-content-f42d7565-ff15-4392-9969-8815a9e08493, 
   #block-reinitialiserrecherche {
