--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -2379,7 +2379,7 @@ audio {
 }
 
 
-
+/*
 @media (max-width: 992px) {
   .path-bibliographie .region-header, 
   .path-recherche .region-header {
@@ -2394,7 +2394,7 @@ audio {
     }
   }
 }
-
+*/
 
 
 
