--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -2435,24 +2435,10 @@ audio {
   padding: 0 10px;
 }
 @media (max-width: 767px) {
-  .path-frontpage {
-    .path-bibliographie .region-header, 
-    .path-recherche .region-header {
-        display: block !important;
-        justify-content: unset;
-    }
-    #block-block-content-f42d7565-ff15-4392-9969-8815a9e08493, 
-    #block-reinitialiserrecherche {
-      margin: 0;
-    }
-    .block-views-exposed-filter-blockenvironnement-recherche-bibliographie-page-1 .form-actions {
-      width: 15%;
-      margin-bottom: 0;
-    }
-    .region-topbar2 {
-      padding-top: 30px;
-    }
-  }    
+  .path-frontpage .region-header {
+    display: block !important;
+    justify-content: unset;
+  }
 }
 
 
