--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -2532,7 +2532,7 @@ table-cell
   }
   .path-recherche .block-views-exposed-filter-blockenvironnement-recherche-page-1 {
       display: table-cell;
-      width: 100%;/*auto*/
+      width: 100%;
   }
   .path-recherche #block-block-content-c94c37ff-4075-4c04-bab5-abfcce11692b {
     float: none;
