--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -2551,7 +2551,7 @@ table-cell
 }
 .path-recherche .region-header .views-exposed-form {
 
-    display: flex; /* table*/
+    display: table;
     width: 100%;
 
 }
