--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -2540,7 +2540,7 @@ table-cell
   }
   .path-recherche #block-block-content-c94c37ff-4075-4c04-bab5-abfcce11692b {
     float: none;
-    display: table-cell;
+/*    display: table-cell;*/
   }
 
 .path-recherche .block-views-exposed-filter-blockenvironnement-recherche-page-1 {
