--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -2452,7 +2452,7 @@ audio {
 }
 
 
-@media (min-width: 992px) {
+/*@media (min-width: 992px) {
   .path-bibliographie .region-header, 
   .path-recherche .region-header {
     .views-exposed-form {
@@ -2464,13 +2464,14 @@ audio {
       float: none;
       display: flex;
     }
-    /* réinitialiser*/
+
     #block-block-content-f42d7565-ff15-4392-9969-8815a9e08493 {
       float: none;
       display: flex;
     }
   }
 }
+*/
 
 /* Forcer taille */
 
@@ -2520,20 +2521,14 @@ table-cell
         display: table;
       justify-content: unset;
 }
-
-
-
   .path-bibliographie #block-views-exposed-filter-block-environnement-recherche-bibliographie-page-1 {
       display: table-cell;
       width: auto;
   }
   .path-bibliographie #block-block-content-f42d7565-ff15-4392-9969-8815a9e08493 {
     float: none;
-    display: table-cell;
+   /* display: table-cell;*/
   }
-
-
-
   .path-recherche .block-views-exposed-filter-blockenvironnement-recherche-page-1 {
       display: table-cell;
       width: 100%;
@@ -2543,13 +2538,15 @@ table-cell
 /*    display: table-cell;*/
   }
 
-.path-recherche .block-views-exposed-filter-blockenvironnement-recherche-page-1 {
+.path-recherche .block-views-exposed-filter-blockenvironnement-recherche-page-1,
+.path-bibliographie #block-views-exposed-filter-block-environnement-recherche-bibliographie-page-1 {
 
     display: table;
     width: 100%;
 
 }
-.path-recherche .region-header .views-exposed-form {
+.path-recherche .region-header .views-exposed-form,
+.path-bibliographie .region-header .views-exposed-form {
 
     display: table;
     width: 100%;
@@ -2573,6 +2570,8 @@ table-cell
 
 
 }
+
+
 
 /* Recherche Header: bordure*/
 #crisecustom-search-form .form-group:hover {
