--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -2298,6 +2298,7 @@ audio {
 }
 
 
+
 /* ACCUEIL - STRUCTURE DU BLOC RECHERCHE 
 .block.accueil_recherche_texte
 .block
@@ -2543,6 +2544,7 @@ table-cell
 
     display: table;
     width: 100%;
+    margin-bottom: 20px;
 
 }
 .path-recherche .region-header .views-exposed-form,
@@ -2568,7 +2570,9 @@ table-cell
 #block-block-content-c94c37ff-4075-4c04-bab5-abfcce11692b {
   
 }
-
+.path-bibliographie #block-block-content-f42d7565-ff15-4392-9969-8815a9e08493 {
+  margin:0;
+}
 
 }
 
