--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -2574,6 +2574,12 @@ table-cell
   margin:0;
 }
 
+.path-recherche #block-block-content-c94c37ff-4075-4c04-bab5-abfcce11692b,
+.path-bibliographie #block-block-content-f42d7565-ff15-4392-9969-8815a9e08493  {
+   margin-bottom:20px;
+}
+
+
 }
 
 
