--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -2578,7 +2578,9 @@ table-cell
 .path-bibliographie #block-block-content-f42d7565-ff15-4392-9969-8815a9e08493  {
    margin-bottom:20px;
 }
-
+.block-views-exposed-filter-blockenvironnement-recherche-page-1 .form-actions, .block-views-exposed-filter-blockenvironnement-recherche-bibliographie-page-1 .form-actions {
+    padding-left: 10px;
+}
 
 }
 
