Référence bibliographique : nouveau format

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1178,7 +1178,11 @@ h3.no-icons {
   margin-bottom: 2em;
 }
 
-/* TODO: Exceptions */
+/* Exception: Bibliographie */
+.view-environnement-recherche-bibliographie .views-row {
+  margin-bottom: 1em;
+}
+
 /* Source: edubiz/home-2 : Our Services
 * .widget.gsc-icon-box .highlight_content .title
 */
