--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1413,6 +1413,8 @@ nav.pager-nav {
 #flexslider-1 {
   .views-field-title {
     text-align:center;
+    margin-left: 10px;
+    margin-right: 10px;
     a:hover {
       color: #86BC42;
     }
