--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1,5 +1,8 @@
 
 /**
+* Thème custom réalisé par Sylvain Aubé pour le Laboratoire NT2, 2019
+* Thème parent: Drupal Bootstrap (Bootstrap 3)
+*
 * 1.0 General
 * 1.1 Typographie
 * Regions
@@ -220,7 +223,8 @@ table > tfoot > tr > td */
 .path-user .view-header a:hover,
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a.is-active,
-.navbar-default .navbar-nav > .active > a:hover {
+.navbar-default .navbar-nav > .active > a:hover,
+.menu--menu-secondaire li.active a {
     color: #86BC42;
     background: #fff;
 }
@@ -478,13 +482,6 @@ ul.menu.menu--menu-secondaire > li {
 .navbar {
   border-radius: 0;
 }
-/*
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:hover, 
-.navbar-default .navbar-nav > .active > a:focus {
-  background-color: transparent;
-  color: #222;
-}*/
 .region-main-navigation {
   margin-top: 15px;
   margin-bottom: 30px;
